끝내며 -> 마치며로 변경

--- a/_posts/2024-05-05-TwIL2.md
+++ b/_posts/2024-05-05-TwIL2.md
@@ -104,7 +104,7 @@ table_mappings
 
 PostgreSQL 에서도 관련 설정이 필요합니다. 그 설정들은 다음주에 다뤄보겠습니다. (실패로 글을 마무리 하다니.)
 
-## 끝내며
+## 마치며
 인프라 쪽 경험이 많이 없어서 부정확한 내용이 있을 수 있는 점 참고해주세요. 인프라 꽤 재밌네요. 가끔하면 좋을거 같아요^^
 관련 도움주신 회사분께 아주 감사한 마음입니다^^(보고 계실 수 있으니)
 
