--- a/_posts/2024-04-28-TwIL1.md
+++ b/_posts/2024-04-28-TwIL1.md
@@ -161,7 +161,7 @@ CSR
 우리가 흔히 사용하는 리액트는 CSR 방식으로 동작합니다. 렌더링 하는 방식이 개발 크게 영향을 미칠지 몰랐는데, 로그인 token 저장을 위해 localStorage 를 사용할 때부터 어려움이 있었어요ㅋㅋㅋ 로그인부터 막히다니.
 서버를 필요로 하고 localStorage 를 사용할 수 없는 어려움 때문에 ssr 을 아래와 같이 off 해서 사용하려고 했는데, 그 뒤에 나오는 사이드이펙트도 만만치 않더라고요,, 그래서 ssr 은 유지하되, localStorage 가 아닌 cookie 를 사용해보려고 합니다. 하지만 이것도 잘 될지 모르겠네요. 잘된다면 공유하죠!!! 언젠간
 
-## 끝내며
+## 마치며
 4월 넷째 주는 제품의 기능을 추가하는 작업과 글에서 언급한 ES 동기화 개선, 그리고 회사 사이드로 진행하고 부분들 프론트 작업을 했습니다. 
 다음 주에는 AWS DMS 쪽 작업을 진행해보려고 합니다. 두근두근
 
